--- a/src/utils/language/english.json
+++ b/src/utils/language/english.json
@@ -1,4 +1,14 @@
 {
     "title": "Hello",
-    "name": "pakistan"
-}
+    "name": "pakistan",
+    "User Management": "User Management",
+    "Affiliate Tracking": "Affiliate Tracking",
+    "Ad Platform Integration": "Ad Platform Integration",
+    "Subscription Management": "Subscription Management",
+    "Security and Fraud Prevention": "Security and Fraud ",
+    "Conversion Tracking on iOS": "Conversion Tracking iOS",
+    "API Integration": "API Integration",
+    "Page Analyzer AI": "Page Analyzer AI",
+    "Interface Customization": "Interface Customization",
+    "Logout": "Logout"
+  }
