--- a/src/utils/language/port.json
+++ b/src/utils/language/port.json
@@ -10,7 +10,7 @@
   "Others": "Outros",
   "Logout": "Sair",
   "AFFILIATE TRACKING": "RASTREAMENTO DE AFILIADOS",
-  "Google Ads": "Google Ads",
+  "Google Ads": "Anúncios do Google",
   "Pending Payments": "Pagamentos Pendentes",
   "Completed": "Concluído",
   "Failed": "Falhou",
@@ -19,5 +19,22 @@
   "Amount": "Montante",
   "Status": "Status",
   "Action": "Ação",
-  "Total": "Total"
+  "Total": "Total",
+  "Currency Changer": "Cambista de moeda",
+  "Meta Ads": "Meta-anúncios",
+  "Dashboard": "Painel",
+  "Earning Reports": "Relatórios de ganhos",
+  "Yearly earning overview": "Visão geral dos ganhos anuais",
+  "year": "ano",
+  "Last year": "Ano passado",
+  "Expenses": "Despesas",
+  "Order Statistics": "Estatísticas de Pedidos",
+  "Total Sales": "Vendas Totais",
+  "Total Orders": "Pedidos Totais",
+  "Electronics": "Eletrônicos",
+  "Mobile, EarBuds, TV": "Celular, Fones de Ouvido, TV",
+  "Fashion": "Moda",
+  "Best Seller": "Mais Vendido",
+  "Balance": "Saldo",
+  "bankstate": "ClickBank é uma plataforma global de e-commerce e marketplace de afiliados, fornecendo uma maneira para os fornecedores venderem produtos digitais e físicos, e para os afiliados promovê-los. Para integrar com o ClickBank, insira sua chave API abaixo."
 }
